--- a/examples/add-your-data.html
+++ b/examples/add-your-data.html
@@ -1,43 +1,39 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-  <meta charset=UTF-8>
-  <link href="https://unpkg.com/maplibre-gl@3.2.1/dist/maplibre-gl.css" rel="stylesheet" />
-  <script src="https://unpkg.com/maplibre-gl@3.2.1/dist/maplibre-gl.js"></script>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-    }
-    #map {
-      min-height: 500px;
-      height: 100%;
-      width: 100%;
-    }
-  </style>
-</head>
-<body>
-  <div id="map"></div>
-  <script>
-    // Don't forget to replace <YOUR_ACCESS_TOKEN> by your real access token!
-    const accessToken = "<YOUR_ACCESS_TOKEN>";
-    const map = new maplibregl.Map({
-      container: "map",
-      style: `https://api.jawg.io/styles/jawg-sunny.json?access-token=${accessToken}`,
-      zoom: 10,
-      center: [2.3488, 48.8534],
-      hash: true
-    }).addControl(new maplibregl.NavigationControl(), "top-right");
-    // This plugin is used for right to left languages
-    maplibregl.setRTLTextPlugin(
-      "https://unpkg.com/@mapbox/mapbox-gl-rtl-text@0.2.3/mapbox-gl-rtl-text.min.js"
-    );
+  <head>
+    <meta charset="UTF-8" />
+    <link href="https://unpkg.com/maplibre-gl@3.2.1/dist/maplibre-gl.css" rel="stylesheet" />
+    <script src="https://unpkg.com/maplibre-gl@3.2.1/dist/maplibre-gl.js"></script>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
+      #map {
+        min-height: 500px;
+        height: 100%;
+        width: 100%;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="map"></div>
+    <script>
+      // Don't forget to replace <YOUR_ACCESS_TOKEN> by your real access token!
+      const accessToken = "<YOUR_ACCESS_TOKEN>";
+      const map = new maplibregl.Map({
+        container: "map",
+        style: `https://api.jawg.io/styles/jawg-sunny.json?access-token=${accessToken}`,
+        zoom: 10,
+        center: [2.3488, 48.8534],
+        hash: true,
+      }).addControl(new maplibregl.NavigationControl(), "top-right");
+      // This plugin is used for right to left languages
+      maplibregl.setRTLTextPlugin("https://unpkg.com/@mapbox/mapbox-gl-rtl-text@0.2.3/mapbox-gl-rtl-text.min.js");
 
-    map.on("load", function() {
-      // Add an image to use as a custom marker
-      map.loadImage(
-        "https://media.jawg.io/add-your-data/shop.png",
-        function(error, image) {
+      map.on("load", function () {
+        // Add an image to use as a custom marker
+        map.loadImage("https://media.jawg.io/add-your-data/shop.png", function (error, image) {
           if (error) throw error;
           // Add image to map
           map.addImage("custom-marker", image);
@@ -48,16 +44,15 @@
             type: "symbol",
             source: {
               type: "geojson",
-              data: "https://media.jawg.io/add-your-data/marketplaces.geojson"
+              data: "https://media.jawg.io/add-your-data/marketplaces.geojson",
             },
             layout: {
               "icon-image": "custom-marker",
-              "icon-anchor": "bottom"
-            }
+              "icon-anchor": "bottom",
+            },
           });
-        }
-      );
-    });
-  </script>
-</body>
+        });
+      });
+    </script>
+  </body>
 </html>
