--- a/examples/gis/gis-simple-map.html
+++ b/examples/gis/gis-simple-map.html
@@ -1,40 +1,38 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <link href="https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.css" rel="stylesheet" />
+    <script src="https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.js"></script>
+    <style>
+      html,
+      body {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+      }
 
-<head>
-  <meta charset=UTF-8>
-  <link href="https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.css" rel="stylesheet" />
-  <script src="https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.js"></script>
-  <style>
-    html,
-    body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-    }
+      #map {
+        min-height: 500px;
+        height: 100%;
+      }
+    </style>
+  </head>
 
-    #map {
-      min-height: 500px;
-      height: 100%;
-    }
-  </style>
-</head>
-
-<body>
-  <div id="map"></div>
-  <script>
-    // Don't forget to replace <YOUR_GIS_ACCESS_TOKEN> by your real access token!
-    const accessToken = "<YOUR_GIS_ACCESS_TOKEN>";
-    const mapId = "<YOUR_GIS_MAP_ID>";
-    const map = new maplibregl.Map({
-      container: "map",
-      style: `https://api.jawg.io/gis/maps/${mapId}/versions/latest/style?access-token=${accessToken}`,
-      zoom: 12,
-      center: [2.35071554, 48.85826376]
-    }).addControl(new maplibregl.NavigationControl(), "top-right");
-    // This plugin is used for right to left languages
-    maplibregl.setRTLTextPlugin("https://unpkg.com/@mapbox/mapbox-gl-rtl-text@0.2.3/mapbox-gl-rtl-text.min.js");
-  </script>
-</body>
-
+  <body>
+    <div id="map"></div>
+    <script>
+      // Don't forget to replace <YOUR_GIS_ACCESS_TOKEN> by your real access token!
+      const accessToken = "<YOUR_GIS_ACCESS_TOKEN>";
+      const mapId = "<YOUR_GIS_MAP_ID>";
+      const map = new maplibregl.Map({
+        container: "map",
+        style: `https://api.jawg.io/gis/maps/${mapId}/versions/latest/style?access-token=${accessToken}`,
+        zoom: 12,
+        center: [2.35071554, 48.85826376],
+      }).addControl(new maplibregl.NavigationControl(), "top-right");
+      // This plugin is used for right to left languages
+      maplibregl.setRTLTextPlugin("https://unpkg.com/@mapbox/mapbox-gl-rtl-text@0.2.3/mapbox-gl-rtl-text.min.js");
+    </script>
+  </body>
 </html>
